--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "apexcharts": "^3.36.3",
+    "axios": "^1.1.3",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
