--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "v5",
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
